fix nav spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -125,7 +125,8 @@ header {
       justify-content: center;
       gap: 0.9rem;
       font-size: 1rem;
-      padding-block: 1.25rem;
+      margin-top: 2rem;
+      margin-bottom: 1rem;
     }
   }
 }
